grid layout start

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 export(Card)
 export(Carousel)
+export(GridLayoutComponent)
 export(SideBar)
 export(SideBarItem)
 export(ThemeToggle)
 export(card)
 export(sideBarItem)
 export(sideBarToggle)
+export(gridLayoutComponent)
 export(sideBar)
 export(themeToggle)
 export(carousel)
