Grid and Responsive Grid components

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,17 @@
 export(Card)
 export(Carousel)
 export(GridLayoutComponent)
+export(GridItem)
+export(ResponsiveGrid)
 export(SideBar)
 export(SideBarItem)
 export(ThemeToggle)
-export(card)
+export(themeToggle)
 export(sideBarItem)
 export(sideBarToggle)
-export(gridLayoutComponent)
 export(sideBar)
-export(themeToggle)
+export(gridLayoutComponent)
+export(card)
 export(carousel)
+export(gridItem)
+export(responsiveGrid)
