--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,7 @@ bh_unicode_properties.cache
 # Sublime-github package stores a github token in this file
 # https://packagecontrol.io/packages/sublime-github
 GitHub.sublime-settings
+
+
+
+dash_trich_components/*-hmr.js
